- Fixed bug where trees would not show when the map was initially loaded (we need to explicitly zoom to the correct level). - Updated lat/lon of UMW so there is no shift on map load. - Improved CSS resizing.

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ main:focus-within {
 }
 
 #navbar {
-    margin-right: calc(800px - 50%);
+    margin-right: calc(825px - 50%);
     position: absolute;
     z-index: 1;
 }
